--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "buffer": "^6.0.3",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
     "react-simple-captcha": "^9.3.1",
