--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.0",
+    "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "react-simple-captcha": "^9.3.1",
     "uuid": "^11.1.0",
@@ -48,8 +48,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.1.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
     "postcss": "^8.5.6",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4.1.11"
   }
 }
